patches/006_longhorn/004_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-gui
  namespace: longhorn-system
spec:
  hostnames:
  - longhorn.smotra.net
  parentRefs:
  - name: private-gateway
    namespace: ingress-gateways
    sectionName: https # Crucial: only attach to the HTTPS listener
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: longhorn-frontend
      port: 80
      weight: 1
    matches:
    - path:
        value: /
        type: PathPrefix
